update create contest logic